packages/kotlin/ttrp-graph/src/test/resources/fixtures/graph/neg/display-as-source.ttrp
// expect: TTRP-CTL-005
uses world "acme.worlds.dev"
container c target erp_pg """sql
    select 1
"""
d = c -> display(main)
d -> store(files.low_regions)
